--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
           <h1>
              Alubari Jasmine Gold
           </h1>
-       
           <p>
               I am passionate about software development, I have experiences in languages like C++, Html, Java, Phyton, I would love to build applications and solve problems.
              <br>
           </p>
-          <img src="images (1000).png">
+          <div>
+             <img src="images (1000).png">
+          </div>
       </body>
 </html>
