--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
              Alubari Jasmine Gold
           </h1>
           <p>
-              I am passionate about software development, I have experiences in languages like C++, Html, Java, Phyton, I would love to build applications and solve problems.
+              I am passionate about software development, I have experiences in languages like C++, Html, Java, Python, I would love to build applications and solve problems.
              <br>
           </p>
           <div>
